Some code style clean up